# IDF_Product

./: .gitmodules  README.md  README.txt  platformio.ini  sdkconfig.esp32dev
components/ais_commonlib/include/architectureabs/: taskabstract.h  taskmanager.h
components/ais_framework/: CMakeLists.txt  README  generate_cmakelists.py
components/ais_framework/include/HAL/HAL_ABSTRACT/: halgpioabstract.h  hali2cabstract.h  halspiabstract.h  haluartabstract.h  mqttclientabstract.h  wifimanagerabstract.h
components/ais_framework/include/HAL/HAL_ESP32/: esp32spi.h  esp32uart.h  halstm32gpio.h  udpesp32.h  (+2 more)
components/ais_message/: CMakeLists._txt  CMakeLists.txt  generate_cmakelists.py
components/ais_message/include/codec/: codecesp32comunication.h  codecmessage.h  iocodec.h  monitorcodec.h
components/ais_message/include/message/: abstractmessage.h  commandsystemmessage.h  configsystemmessage.h  messagecommon.h  monitorsystemmessage.h  pingmessage.h
components/ais_message/src/codec/: codecesp32comunication.cpp
components/ais_message/src/message/: commandsystemmessage.cpp  configsystemmessage.cpp  monitorsystemmessage.cpp  pingmessage.cpp
include/common/: common.h  storeflashmanager.h  webservermanager.h  webserversource.h
include/task/: configsystemtask.h  monitorsystemtask.h  mqttcommunicationtask.h  relaymanagertask.h  wifimanagertask.h
src/: MyMain.cpp  main.c
src/common/: common.cpp  storeflashmanager.cpp  webservermanager.cpp
src/task/: configsystemtask.cpp  monitorsystemtask.cpp  mqttcommunicationtask.cpp  relaymanagertask.cpp  wifimanagertask.cpp
